# kalos

./: CITATION.cff  LICENSE  README.md  pyproject.toml
configs/3D_voxel_instance_segmentation/lidc_idri/: lidc_idri_3d_configure.yaml  lidc_idri_3d_iou_disagreement.yaml  lidc_idri_3d_kalos.yaml
configs/instance_segmentation/lvis/: lvis_segm_configure.yaml  lvis_segm_iou_disagreement.yaml  lvis_segm_kalos.yaml
configs/instance_segmentation/texbig/: texbig_segm_centroid_disagreement.yaml  texbig_segm_configure.yaml  texbig_segm_giou_disagreement.yaml  texbig_segm_iou_disagreement.yaml  texbig_segm_kalos.yaml
configs/keypoints/mars/: mars_keypoints_configure.yaml  mars_keypoints_kalos.yaml  mars_keypoints_mpjpe_disagreement.yaml
configs/object_detection/vindrcxr/: vindrcxr_bbox_centroid_disagreement.yaml  vindrcxr_bbox_configure.yaml  vindrcxr_bbox_iou_disagreement.yaml  vindrcxr_bbox_kalos.yaml
src/kalos/: config.py
src/kalos/correspondence/: correspondence_algorithms.py
src/kalos/iaa/: empirical_disagreement.py  kalos_execution.py  plotting_execution.py  principled_configuration.py
src/kalos/utils/: export_utils.py  theme_manager.py
